--- a/manifest.json
+++ b/manifest.json
@@ -1,11 +1,10 @@
 {
-	"id": "sample-plugin",
-	"name": "Sample Plugin",
+	"id": "json-inline-fields",
+	"name": "JSON Inline Fields",
 	"version": "1.0.0",
 	"minAppVersion": "0.15.0",
-	"description": "This is a sample plugin for Obsidian. This plugin demonstrates some of the capabilities of the Obsidian API.",
-	"author": "Obsidian",
-	"authorUrl": "https://obsidian.md",
-	"fundingUrl": "https://obsidian.md/pricing",
+	"description": "Beautify Dataview inline fields, if they are JSON objects.",
+	"author": "Rubens Pischedda",
+	"authorUrl": "https://github.com/rubenspischedda",
 	"isDesktopOnly": false
 }
